Some more work on the pages

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
             </div>      
 
   <div class="container">
-    <img src="BYUIT Logo.png">
+    <img src="img/BYUIT Logo.png">
     <div class="page-header">
       <h1>About <small>us</small></h1>
     </div>
