--- a/submit.html
+++ b/submit.html
@@ -75,7 +75,7 @@
   <div class="container">
 
 
-    <form action="track.html">
+    <form action="tracker.html">
       <fieldset>
         <label>Project name</label>
         <input type="text" placeholder="name">
