Put Matt's login stuff into all the new pages

--- a/search.html
+++ b/search.html
@@ -46,7 +46,7 @@
       <a class="brand" href="home.html">IT Senior Capstone Projects</a>
       <ul class="nav">
         <li><a href="home.html">home</a></li>
-        <li><a href="#">about</a></li>
+        <li><a href="about.html">about</a></li>
       </ul>
       <p class="navbar-text pull-right">
         <a href="#myModal" role="button" class="navbar-link" data-toggle="modal">Sign In</a>
