--- a/project.html
+++ b/project.html
@@ -44,11 +44,34 @@
       <ul class="nav">
         <li><a href="home.html">home</a></li>
         <li><a href="about.html">about</a></li>
-        <li><a href="#">login</a></li>
       </ul>
+      <p class="navbar-text pull-right">
+        <a href="#myModal" role="button" class="navbar-link" data-toggle="modal">Sign In</a>
+      </p>  
     </div>
   </div>
-
+ <!-- Modal -->
+  <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
+      <h3 id="myModalLabel">Sign In</h3>
+    </div>
+    <form title="register_form" method="POST" action="">
+      <div class="modal-body">
+        <div style="text-align:center">
+          UserName<br><input type="text" name="user"></input><br>
+          Password<br><input type="PASSWORD" name="pass"></input><br>
+        </div>
+        <div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+        <button class="btn btn-primary">Submit</button>
+      </div>
+    </form>
+  </div> 
+            
   <div class="container">
     <h1>Entry Point</h1>
 
