added some stuff

--- a/search.html
+++ b/search.html
@@ -91,6 +91,65 @@
       <button class="btn btn-primary">Find a Student</button></label>
     </div>
 
+    <div>
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Project</th>
+            <th>Email</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John Doe</td>
+            <td>Super Car</td>
+            <td> jon@example.com</td>
+          </tr>
+          <tr>
+            <td>Jane Doe</td>
+            <td>Super Car</td>
+            <td> Jane@example.com</td>
+          </tr>
+          <tr>
+            <td>Bobby Buchae</td>
+            <td>Flying camera</td>
+            <td> bob@example.com</td>
+          </tr>
+          <tr>
+            <td>Chris K</td>
+            <td>Super Car</td>
+            <td> jon@example.com</td>
+          </tr>
+          <tr>
+            <td>Big Pete</td>
+            <td>Flying camera</td>
+            <td> jon@example.com</td>
+          </tr>
+          <tr>
+            <td>John Doe</td>
+            <td>Super Car</td>
+            <td> jon@example.com</td>
+          </tr>
+          <tr>
+            <td>John Doe</td>
+            <td>Super Car</td>
+            <td> jon@example.com</td>
+          </tr>
+          <tr>
+            <td>John Doe</td>
+            <td>Super Car</td>
+            <td> jon@example.com</td>
+          </tr>
+          <tr>
+            <td>John Doe</td>
+            <td>Super Car</td>
+            <td> jon@example.com</td>
+          </tr>                                                                                
+        </tbody>
+
+      </table>
+    </div>
   </div> <!-- /container -->
 
   <footer>
