--- a/home.html
+++ b/home.html
@@ -83,6 +83,7 @@
       </ol>
       <!-- Carousel items -->
       <div class="carousel-inner">
+        <h2 style="position:absolute; z-index: 5; padding: 20px; text-shadow: 2px 2px gray;">Projcet Name</h2>
         <div class="active item"><img src="http://twitter.github.com/bootstrap/assets/img/examples/slide-01.jpg"></div>
         <div class="item"><img src="http://twitter.github.com/bootstrap/assets/img/examples/slide-02.jpg"></div>
         <div class="item"><img src="http://twitter.github.com/bootstrap/assets/img/examples/slide-03.jpg"></div>
@@ -93,6 +94,8 @@
     </div>
     
     <div>
+      <p> <strong>About the project </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+
       <a class="btn btn-primary btn-large pull-left" href="search.html">Find a Project or Student</a>
       <a class="btn btn-primary btn-large pull-right" href="submit.html">Submit an Idea</a>
     </div>
