--- a/search.html
+++ b/search.html
@@ -102,7 +102,7 @@
         </thead>
         <tbody>
           <tr>
-            <td>John Doe</td>
+            <td><a href="student.html">John Doe</a></td>
             <td>Super Car</td>
             <td> jon@example.com</td>
           </tr>
