--- a/search.html
+++ b/search.html
@@ -45,8 +45,10 @@
     <div class="navbar-inner">
       <a class="brand" href="home.html">IT Senior Capstone Projects</a>
       <ul class="nav">
-        <li><a href="home.html">home</a></li>
-        <li><a href="about.html">about</a></li>
+        <li><a href="home.html">Home</a></li>
+        <li class="active"><a href="search.html">Find Students</a></li>
+        <li><a href="submit.html">Submit Idea</a></li>        
+        <li><a href="about.html">About</a></li>
       </ul>
       <p class="navbar-text pull-right">
         <a href="#myModal" role="button" class="navbar-link" data-toggle="modal">Sign In</a>
