--- a/home.html
+++ b/home.html
@@ -29,11 +29,6 @@
 	<script src="jquery-1.7.2.js"></script>
 	<script src="bootstrap/js/bootstrap.min.js"></script>
 
-  <script>
-    $(document).ready(function(){
-      
-    });
-  </script>
 
 
 </head>
@@ -83,7 +78,7 @@
       </ol>
       <!-- Carousel items -->
       <div class="carousel-inner">
-        <h2 style="position:absolute; z-index: 5; padding: 20px; text-shadow: 2px 2px gray;">Projcet Name</h2>
+        <h2 style="position:absolute; z-index: 5; padding: 20px; text-shadow: 2px 2px gray;">Project Name</h2>
         <div class="active item"><img src="http://twitter.github.com/bootstrap/assets/img/examples/slide-01.jpg"></div>
         <div class="item"><img src="http://twitter.github.com/bootstrap/assets/img/examples/slide-02.jpg"></div>
         <div class="item"><img src="http://twitter.github.com/bootstrap/assets/img/examples/slide-03.jpg"></div>
@@ -107,5 +102,17 @@
     <p>&copy; Entry Point 2013</p>
   </footer>
 
+  <script>
+    $(document).ready(function(){
+      
+     $('.myCarousel').carousel({
+     interval: 1500
+     })
+     $(function(){
+     $('.carousel-control right').trigger('click');
+     });
+
+    });
+  </script>
 </body>
 </html>
