added some small fixes

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
       <a class="brand" href="home.html">IT Senior Capstone Projects</a>
       <ul class="nav">
         <li><a href="home.html">Home</a></li>
-        <li><a href="search.html">Find Students</a></li>
+        <li><a href="search.html">Search</a></li>
         <li><a href="submit.html">Submit Idea</a></li>        
         <li class="active"><a href="#">About</a></li>
       </ul>
