--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
       <a class="brand" href="#">IT Senior Capstone Projects</a>
       <ul class="nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="search.html">Find Students</a></li>
+        <li><a href="search.html">Search</a></li>
         <li><a href="submit.html">Submit Idea</a></li>        
         <li><a href="about.html">About</a></li>      
       </ul>
