--- a/project.html
+++ b/project.html
@@ -42,8 +42,10 @@
     <div class="navbar-inner">
       <a class="brand" href="#">IT Senior Capstone Projects</a>
       <ul class="nav">
-        <li><a href="home.html">home</a></li>
-        <li><a href="about.html">about</a></li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="search.html">Search</a></li>
+        <li><a href="submit.html">Submit Idea</a></li>        
+        <li><a href="about.html">About</a></li>
       </ul>
       <p class="navbar-text pull-right">
         <a href="#myModal" role="button" class="navbar-link" data-toggle="modal">Sign In</a>
@@ -95,6 +97,8 @@
         </div>
       </div>
       <div class="span8">
+        <h2>Project Info</h2>
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula sollicitudin augue sed placerat. Maecenas luctus mollis dui, feugiat iaculis enim ultrices at. Ut tempor, velit in adipiscing sagittis, ipsum erat consectetur diam, et adipiscing diam orci ac nisl. Donec mattis turpis et tortor vestibulum interdum ac sit amet sapien. Praesent quam urna, viverra nec hendrerit in, mattis eget augue. Vestibulum malesuada urna nec dui rhoncus lacinia. Curabitur imperdiet, velit eu iaculis placerat, erat libero molestie elit, a tincidunt ligula mi quis tellus. Aliquam turpis est, dapibus sit amet hendrerit ac, ullamcorper faucibus lacus. Fusce vitae erat lacus, sit amet fermentum eros. Vivamus congue consectetur pellentesque.</p>
         <h2>Tracker</h2>
         <div class="accordion" id="accordion2">
           <div class="accordion-group">
