--- a/search.html
+++ b/search.html
@@ -46,7 +46,7 @@
       <a class="brand" href="home.html">IT Senior Capstone Projects</a>
       <ul class="nav">
         <li><a href="home.html">Home</a></li>
-        <li class="active"><a href="search.html">Find Students</a></li>
+        <li class="active"><a href="search.html">Search</a></li>
         <li><a href="submit.html">Submit Idea</a></li>        
         <li><a href="about.html">About</a></li>
       </ul>
@@ -105,7 +105,7 @@
         <tbody>
           <tr>
             <td><a href="student.html">John Doe</a></td>
-            <td>Super Car</td>
+            <td><a href="project.html">Entry Point</a></td>
             <td> jon@example.com</td>
           </tr>
           <tr>
