--- a/submit.html
+++ b/submit.html
@@ -43,7 +43,7 @@
       <a class="brand" href="#">IT Senior Capstone Projects</a>
       <ul class="nav">
         <li><a href="home.html">Home</a></li>
-        <li><a href="search.html">Find Students</a></li>
+        <li><a href="search.html">Search</a></li>
         <li class="active"><a href="submit.html">Submit Idea</a></li>        
         <li><a href="about.html">About</a></li>
       </ul>
