--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
 <body>
   <div class="navbar">
     <div class="navbar-inner">
-      <a class="brand" href="#">IT Senior Capstone Projects</a>
+      <a class="brand" href="home.html">IT Senior Capstone Projects</a>
       <ul class="nav">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="search.html">Search</a></li>
