--- a/student.html
+++ b/student.html
@@ -40,7 +40,7 @@
 <body>
   <div class="navbar">
     <div class="navbar-inner">
-      <a class="brand" href="#">IT Senior Capstone Projects</a>
+      <a class="brand" href="home.html">IT Senior Capstone Projects</a>
       <ul class="nav">
         <li><a href="home.html">Home</a></li>
         <li><a href="search.html">Search</a></li>
