submits take you home

--- a/submit.html
+++ b/submit.html
@@ -58,7 +58,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
                 <h3 id="myModalLabel">Sign In</h3>
               </div>
-              <form title="register_form" method="POST" action="">
+              <form title="register_form" method="POST" action="home.html">
                 <div class="modal-body">
                   <div style="text-align:center">
                     UserName<br><input type="text" name="user"></input><br>
