--- a/about.html
+++ b/about.html
@@ -78,14 +78,17 @@
             </div>      
 
   <div class="container">
-    <img src="img/BYUIT Logo.png">
+    <!--<img src="img/BYUIT Logo.png">-->
     <div class="page-header">
       <h1>About <small>us</small></h1>
     </div>
 
-    <p class="lead">
+  <div id='container'>
+    <img src='img/aboutUs.jpg' style="float: left;padding: 9px;"/>
+    <p class="lead" style="padding: 5px;">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula sollicitudin augue sed placerat. Maecenas luctus mollis dui, feugiat iaculis enim ultrices at. Ut tempor, velit in adipiscing sagittis, ipsum erat consectetur diam, et adipiscing diam orci ac nisl. Donec mattis turpis et tortor vestibulum interdum ac sit amet sapien. Praesent quam urna, viverra nec hendrerit in, mattis eget augue. Vestibulum malesuada urna nec dui rhoncus lacinia. Curabitur imperdiet, velit eu iaculis placerat, erat libero molestie elit, a tincidunt ligula mi quis tellus. Aliquam turpis est, dapibus sit amet hendrerit ac, ullamcorper faucibus lacus. Fusce vitae erat lacus, sit amet fermentum eros. Vivamus congue consectetur pellentesque.
     </p>
+    </div>
 
     <p>
     Aliquam justo sapien, imperdiet vel porttitor ut, vehicula eget diam. Cras molestie, lacus eu volutpat commodo, augue ipsum mollis diam, id aliquam augue nunc a justo. Cras sed lorem velit, at ultrices nisi. Duis ac ligula id tellus faucibus lacinia vel at dolor. Suspendisse quis leo et lacus pellentesque tincidunt. In eu sem non erat hendrerit iaculis. Morbi dignissim consequat urna et mattis. Integer pharetra leo sed augue porttitor eu viverra est adipiscing. Praesent dignissim convallis velit, pellentesque rhoncus risus elementum at.
