--- a/student.html
+++ b/student.html
@@ -12,17 +12,7 @@
     .navbar a.brand {
       color: #006dcc;
     }
-    footer {
-      position:fixed;
-      bottom:0px;
-    }
-    footer hr{
-      margin:2px;
-    }
-    footer p {
-      padding-left: 5px;
-      margin-bottom: 2px;
-    }
+
   </style>
 
 
@@ -76,24 +66,26 @@
 
 
   <div class="container">
-    <h1>John Doe </h1>
     <img src="img/student.jpg" width="400px" style="float:right; padding:60px">
+    <h1>John Doe </h1>
     <div>
       <h3>Student Info</h3>
       <strong>jon@example.com</strong>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula sollicitudin augue sed placerat. Maecenas luctus mollis dui, feugiat iaculis enim ultrices at. Ut tempor, velit in adipiscing sagittis, ipsum erat consectetur diam, et adipiscing diam orci ac nisl. Donec mattis turpis et tortor vestibulum interdum ac sit amet sapien. Praesent quam urna, viverra nec hendrerit in, mattis eget augue. Vestibulum malesuada urna nec dui rhoncus lacinia. Curabitur imperdiet, velit eu iaculis placerat, erat libero molestie elit, a tincidunt ligula mi quis tellus. Aliquam turpis est, dapibus sit amet hendrerit ac, ullamcorper faucibus lacus. Fusce vitae erat lacus, sit amet fermentum eros. Vivamus congue consectetur pellentesque.</p>
-      <h3>Project Info</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula sollicitudin augue sed placerat. Maecenas luctus mollis dui, feugiat iaculis enim ultrices at. Ut tempor, velit in adipiscing sagittis, ipsum erat consectetur diam, et adipiscing diam orci ac nisl. Donec mattis turpis et tortor vestibulum interdum ac sit amet sapien. Praesent quam urna, viverra nec hendrerit in, mattis eget augue. Vestibulum malesuada urna nec dui rhoncus lacinia. Curabitur imperdiet, velit eu iaculis placerat, erat libero molestie elit, a tincidunt ligula mi quis tellus. Aliquam turpis est, dapibus sit amet hendrerit ac, ullamcorper faucibus lacus. Fusce vitae erat lacus, sit amet fermentum eros. Vivamus congue consectetur pellentesque.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula sollicitudin augue sed placerat. Maecenas luctus mollis dui, feugiat iaculis enim ultrices at. Ut tempor, velit in adipiscing sagittis, ipsum erat consectetur diam, et adipiscing diam orci.</p>
+      <h3>Capstone Project Info</h3>
+      <p><a href="project.html">Entry point</a> lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula sollicitudin augue sed placerat. Maecenas luctus mollis dui, feugiat iaculis enim ultrices at. Ut tempor, velit in adipiscing sagittis, ipsum erat consectetur diam, et adipiscing diam orci ac nisl. Donec mattis turpis et tortor vestibulum interdum ac sit amet sapien.</p>
+      <h3>Previous Class work</h3>
+      <a href="#">IT 210</a><br>
+      <a href="#">CS 235</a><br>
+      <a href="#">CS 236</a><br>
+      <a href="#">IT 252</a><br>
+      <a href="#">IT 344</a><br>
+      <a href="#">IT 355</a>
     </div>
     
 
 
   </div> <!-- /container -->
-
-  <footer>
-    <hr>
-    <p>&copy; Entry Point 2013</p>
-  </footer>
 
 </body>
 </html>
