Fixed a small thing

--- a/project.html
+++ b/project.html
@@ -103,7 +103,7 @@
                 Phase 1
               </a>
             </div>
-            <div id="collapseOne" class="accordion-body collapse in">
+            <div id="collapseOne" class="accordion-body collapse">
               <div class="accordion-inner">
                 <h3>Status</h3>
                 Anim paritur cliche...
