--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BYU Informatin Technology Capstone Projects</title>
+  <title>BYU Information Technology Capstone Projects</title>
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
